[package]
name = "rustkrazy_admind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls"] }
rustls = "0.20.0"
rustls-pemfile = "1.0.2"
thiserror = "1.0"
