[package]
name = "rustkrazy_admind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls", "macros"], default-features = false }
actix-web-httpauth = "0.8.0"
constant_time_eq = "0.2.5"
fatfs = "0.3.6"
fscommon = "0.1.1"
nix = { version = "0.27.1", features = ["fs"] }
rustls = { version = "0.20.0", default-features = false }
rustls-pemfile = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
sysinfo = { version = "0.29.10", default-features = false }
thiserror = "1.0"
